--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 .text{
     text-align: center;
+    margin-top: 50px;
+    background-color:  rgb(207, 221, 7);
+
 }
 
+body{
+    background-image: url(images.png);
+    background-repeat: no-repeat;
+    opacity: 0.9;
+    width: 1350px;
+    background-size: 1400px 700px;
+}
